load("//bazel:mongo_src_rules.bzl", "mongo_cc_library")

exports_files([
    "*.h",
    "*.cpp",
])

package(default_visibility = ["//visibility:public"])

mongo_cc_library(
    name = "core_headers_library",
    hdrs = [
        "//src/mongo:mongo_global_hdrs",
        "//src/mongo/base:base_global_hdrs",
        "//src/mongo/base:error_codes_header",
        "//src/mongo/base/concept:concept_global_hdrs",
        "//src/mongo/bson:bson_global_hdrs",
        "//src/mongo/bson:bson_validate_idl_gen",
        "//src/mongo/bson/mutable:mutable_global_hdrs",
        "//src/mongo/bson/util:util_global_hdrs",
        "//src/mongo/client:async_client_idl_gen",
        "//src/mongo/client:client_api_version_parameters_idl_gen",
        "//src/mongo/client:client_global_hdrs",
        "//src/mongo/client:global_conn_pool_idl_gen",
        "//src/mongo/client:hedging_mode_idl_gen",
        "//src/mongo/client:read_preference_idl_gen",
        "//src/mongo/client:read_preference_setting_idl_gen",
        "//src/mongo/client:replica_set_monitor_server_parameters_idl_gen",
        "//src/mongo/client:sasl_aws_client_options_idl_gen",
        "//src/mongo/client:sasl_aws_client_protocol_idl_gen",
        "//src/mongo/client:sasl_aws_protocol_common_idl_gen",
        "//src/mongo/client:sasl_oidc_client_types_idl_gen",
        "//src/mongo/client:sasl_sspi_options_idl_gen",
        "//src/mongo/client/sdam:json_test_runner_cli_options_idl_gen",
        "//src/mongo/client/sdam:sdam_configuration_parameters_idl_gen",
        "//src/mongo/client/sdam:sdam_global_hdrs",
        "//src/mongo/client/sdam/json_tests:json_tests_global_hdrs",
        "//src/mongo/client/sdam/json_tests/sdam_tests:sdam_tests_global_hdrs",
        "//src/mongo/client/sdam/json_tests/sdam_tests/rs:rs_global_hdrs",
        "//src/mongo/client/sdam/json_tests/sdam_tests/sharded:sharded_global_hdrs",
        "//src/mongo/client/sdam/json_tests/sdam_tests/single:single_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests:server_selection_tests_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/max_staleness:max_staleness_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/max_staleness/ReplicaSetNoPrimary:ReplicaSetNoPrimary_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/max_staleness/ReplicaSetWithPrimary:ReplicaSetWithPrimary_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/max_staleness/Sharded:Sharded_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/max_staleness/Single:Single_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/max_staleness/Unknown:Unknown_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/rtt:rtt_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/server_selection:server_selection_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/server_selection/ReplicaSetNoPrimary:ReplicaSetNoPrimary_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/server_selection/ReplicaSetNoPrimary/read:read_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/server_selection/ReplicaSetWithPrimary:ReplicaSetWithPrimary_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/server_selection/ReplicaSetWithPrimary/read:read_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/server_selection/Single:Single_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/server_selection/Single/read:read_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/server_selection/Unknown:Unknown_global_hdrs",
        "//src/mongo/client/sdam/json_tests/server_selection_tests/server_selection/Unknown/read:read_global_hdrs",
        "//src/mongo/crypto:crypto_global_hdrs",
        "//src/mongo/crypto:encryption_fields_idl_gen",
        "//src/mongo/crypto:fle_field_schema_idl_gen",
        "//src/mongo/crypto:fle_options_idl_gen",
        "//src/mongo/crypto:fle_stats_idl_gen",
        "//src/mongo/crypto:fle_tokens_idl_gen",
        "//src/mongo/crypto:jwt_types_idl_gen",
        "//src/mongo/crypto:sha1_block_idl_gen",
        "//src/mongo/crypto:sha256_block_idl_gen",
        "//src/mongo/crypto:sha512_block_idl_gen",
        "//src/mongo/crypto/scripts:scripts_global_hdrs",
        "//src/mongo/crypto/test_vectors:test_vectors_global_hdrs",
        "//src/mongo/db:api_parameters_idl_gen",
        "//src/mongo/db:basic_types_idl_gen",
        "//src/mongo/db:catalog_shard_feature_flag_idl_gen",
        "//src/mongo/db:change_stream_options_idl_gen",
        "//src/mongo/db:change_stream_options_parameter_idl_gen",
        "//src/mongo/db:change_stream_state_idl_gen",
        "//src/mongo/db:change_streams_cluster_parameter_idl_gen",
        "//src/mongo/db:cloner_idl_gen",
        "//src/mongo/db:cluster_auth_mode_option_idl_gen",
        "//src/mongo/db:coll_mod_idl_gen",
        "//src/mongo/db:commands_test_example_idl_gen",
        "//src/mongo/db:common_request_args_idl_gen",
        "//src/mongo/db:connection_health_metrics_parameter_idl_gen",
        "//src/mongo/db:create_indexes_idl_gen",
        "//src/mongo/db:cursor_server_params_idl_gen",
        "//src/mongo/db:db_global_hdrs",
        "//src/mongo/db:dbcommands_idl_gen",
        "//src/mongo/db:default_max_time_ms_cluster_parameter_idl_gen",
        "//src/mongo/db:drop_database_idl_gen",
        "//src/mongo/db:drop_idl_gen",
        "//src/mongo/db:drop_indexes_idl_gen",
        "//src/mongo/db:explain_idl_gen",
        "//src/mongo/db:feature_compatibility_version_document_idl_gen",
        "//src/mongo/db:feature_flag_test_gen",
        "//src/mongo/db:generic_cursor_idl_gen",
        "//src/mongo/db:initialize_server_global_state_idl_gen",
        "//src/mongo/db:internal_transactions_feature_flag_idl_gen",
        "//src/mongo/db:keyfile_option_idl_gen",
        "//src/mongo/db:keypattern_idl_gen",
        "//src/mongo/db:keys_collection_document_idl_gen",
        "//src/mongo/db:keys_collection_manager_idl_gen",
        "//src/mongo/db:list_collections_idl_gen",
        "//src/mongo/db:list_indexes_idl_gen",
        "//src/mongo/db:metadata_consistency_types_idl_gen",
        "//src/mongo/db:mirror_maestro_idl_gen",
        "//src/mongo/db:mongod_options_general_idl_gen",
        "//src/mongo/db:mongod_options_legacy_idl_gen",
        "//src/mongo/db:mongod_options_replication_idl_gen",
        "//src/mongo/db:mongod_options_sharding_idl_gen",
        "//src/mongo/db:mongod_options_storage_idl_gen",
        "//src/mongo/db:multitenancy_idl_gen",
        "//src/mongo/db:namespace_spec_idl_gen",
        "//src/mongo/db:read_concern_mongod_idl_gen",
        "//src/mongo/db:read_write_concern_defaults_idl_gen",
        "//src/mongo/db:read_write_concern_provenance_base_idl_gen",
        "//src/mongo/db:record_id_idl_gen",
        "//src/mongo/db:resumable_index_builds_idl_gen",
        "//src/mongo/db:server_feature_flags_idl_gen",
        "//src/mongo/db:server_options_base_idl_gen",
        "//src/mongo/db:server_options_general_idl_gen",
        "//src/mongo/db:server_options_helpers_idl_gen",
        "//src/mongo/db:server_options_nongeneral_idl_gen",
        "//src/mongo/db:server_options_upgrade_downgrade_idl_gen",
        "//src/mongo/db:server_parameter_idl_gen",
        "//src/mongo/db:set_change_stream_state_coordinator_idl_gen",
        "//src/mongo/db:snapshot_window_options_idl_gen",
        "//src/mongo/db:traffic_recorder_idl_gen",
        "//src/mongo/db:ttl_idl_gen",
        "//src/mongo/db:vector_clock_document_idl_gen",
        "//src/mongo/db:vector_clock_idl_gen",
        "//src/mongo/db:windows_options_idl_gen",
        "//src/mongo/db:write_concern_idl_gen",
        "//src/mongo/db:write_concern_options_idl_gen",
        "//src/mongo/db/admission:admission_global_hdrs",
        "//src/mongo/db/admission:execution_control_feature_flags_idl_gen",
        "//src/mongo/db/admission:execution_control_parameters_idl_gen",
        "//src/mongo/db/admission:ingress_admission_control_idl_gen",
        "//src/mongo/db/admission:throughput_probing_idl_gen",
        "//src/mongo/db/auth:access_checks_idl_gen",
        "//src/mongo/db/auth:action_type_idl_gen",
        "//src/mongo/db/auth:address_restriction_idl_gen",
        "//src/mongo/db/auth:auth_global_hdrs",
        "//src/mongo/db/auth:auth_options_idl_gen",
        "//src/mongo/db/auth:auth_types_idl_gen",
        "//src/mongo/db/auth:authorization_manager_global_parameters_idl_gen",
        "//src/mongo/db/auth:authorization_manager_impl_parameters_idl_gen",
        "//src/mongo/db/auth:enable_localhost_auth_bypass_parameter_idl_gen",
        "//src/mongo/db/auth:oauth_authorization_server_metadata_idl_gen",
        "//src/mongo/db/auth:oidc_protocol_idl_gen",
        "//src/mongo/db/auth:parsed_privilege_idl_gen",
        "//src/mongo/db/auth:sasl_commands_idl_gen",
        "//src/mongo/db/auth:sasl_options_idl_gen",
        "//src/mongo/db/auth:user_cache_invalidator_job_parameters_idl_gen",
        "//src/mongo/db/auth:user_management_commands_parser_idl_gen",
        "//src/mongo/db/auth:validated_tenancy_scope_idl_gen",
        "//src/mongo/db/bson:bson_global_hdrs",
        "//src/mongo/db/catalog:catalog_global_hdrs",
        "//src/mongo/db/catalog:clustered_collection_options_idl_gen",
        "//src/mongo/db/catalog:collection_options_idl_gen",
        "//src/mongo/db/catalog:commit_quorum_idl_gen",
        "//src/mongo/db/catalog:health_log_idl_gen",
        "//src/mongo/db/catalog:import_collection_oplog_entry_idl_gen",
        "//src/mongo/db/catalog:index_build_entry_idl_gen",
        "//src/mongo/db/catalog:multi_index_block_idl_gen",
        "//src/mongo/db/catalog:validate_idl_gen",
        "//src/mongo/db/catalog/util:util_global_hdrs",
        "//src/mongo/db/commands:authentication_commands_idl_gen",
        "//src/mongo/db/commands:bulk_write_idl_gen",
        "//src/mongo/db/commands:cluster_server_parameter_cmds_idl_gen",
        "//src/mongo/db/commands:commands_global_hdrs",
        "//src/mongo/db/commands:compact_idl_gen",
        "//src/mongo/db/commands:connection_status_idl_gen",
        "//src/mongo/db/commands:create_idl_gen",
        "//src/mongo/db/commands:drop_connections_idl_gen",
        "//src/mongo/db/commands:feature_compatibility_version_idl_gen",
        "//src/mongo/db/commands:fle2_cleanup_idl_gen",
        "//src/mongo/db/commands:fle2_compact_idl_gen",
        "//src/mongo/db/commands:fle2_get_count_info_command_idl_gen",
        "//src/mongo/db/commands:generic_idl_gen",
        "//src/mongo/db/commands:generic_servers_idl_gen",
        "//src/mongo/db/commands:http_client_idl_gen",
        "//src/mongo/db/commands:internal_rename_if_options_and_indexes_match_idl_gen",
        "//src/mongo/db/commands:internal_transactions_test_command_idl_gen",
        "//src/mongo/db/commands:kill_operations_idl_gen",
        "//src/mongo/db/commands:list_databases_for_all_tenants_idl_gen",
        "//src/mongo/db/commands:list_databases_idl_gen",
        "//src/mongo/db/commands:lock_info_idl_gen",
        "//src/mongo/db/commands:map_reduce_idl_gen",
        "//src/mongo/db/commands:notify_sharding_event_idl_gen",
        "//src/mongo/db/commands:parameters_idl_gen",
        "//src/mongo/db/commands:profile_idl_gen",
        "//src/mongo/db/commands:query_settings_cmds_idl_gen",
        "//src/mongo/db/commands:rename_collection_idl_gen",
        "//src/mongo/db/commands:resize_oplog_idl_gen",
        "//src/mongo/db/commands:rotate_certificates_idl_gen",
        "//src/mongo/db/commands:rwc_defaults_commands_idl_gen",
        "//src/mongo/db/commands:search_index_commands_idl_gen",
        "//src/mongo/db/commands:sessions_commands_idl_gen",
        "//src/mongo/db/commands:set_feature_compatibility_version_idl_gen",
        "//src/mongo/db/commands:set_index_commit_quorum_idl_gen",
        "//src/mongo/db/commands:set_user_write_block_mode_idl_gen",
        "//src/mongo/db/commands:shardsvr_run_search_index_command_idl_gen",
        "//src/mongo/db/commands:sysprofile_idl_gen",
        "//src/mongo/db/commands:tenant_migration_donor_cmds_idl_gen",
        "//src/mongo/db/commands:tenant_migration_recipient_cmds_idl_gen",
        "//src/mongo/db/commands:test_commands_enabled_idl_gen",
        "//src/mongo/db/commands:txn_cmds_idl_gen",
        "//src/mongo/db/commands:txn_two_phase_commit_cmds_idl_gen",
        "//src/mongo/db/commands:user_management_commands_idl_gen",
        "//src/mongo/db/commands:validate_db_metadata_idl_gen",
        "//src/mongo/db/commands:vote_index_build_idl_gen",
        "//src/mongo/db/commands:xray_commands_idl_gen",
        "//src/mongo/db/concurrency:concurrency_global_hdrs",
        "//src/mongo/db/concurrency:exception_util_idl_gen",
        "//src/mongo/db/cst:cst_global_hdrs",
        "//src/mongo/db/exec:batched_delete_stage_idl_gen",
        "//src/mongo/db/exec:disk_use_options_idl_gen",
        "//src/mongo/db/exec:exec_global_hdrs",
        "//src/mongo/db/exec/document_value:document_value_global_hdrs",
        "//src/mongo/db/exec/express:express_global_hdrs",
        "//src/mongo/db/exec/sbe:sbe_global_hdrs",
        "//src/mongo/db/exec/sbe/abt:abt_global_hdrs",
        "//src/mongo/db/exec/sbe/expressions:expressions_global_hdrs",
        "//src/mongo/db/exec/sbe/stages:stages_global_hdrs",
        "//src/mongo/db/exec/sbe/util:util_global_hdrs",
        "//src/mongo/db/exec/sbe/values:values_global_hdrs",
        "//src/mongo/db/exec/sbe/vm:vm_global_hdrs",
        "//src/mongo/db/exec/timeseries:timeseries_global_hdrs",
        "//src/mongo/db/ftdc:ftdc_commands_idl_gen",
        "//src/mongo/db/ftdc:ftdc_global_hdrs",
        "//src/mongo/db/ftdc:ftdc_mongod_idl_gen",
        "//src/mongo/db/ftdc:ftdc_server_idl_gen",
        "//src/mongo/db/fts:fts_global_hdrs",
        "//src/mongo/db/fts:stop_words_list_cpp_gen",
        "//src/mongo/db/fts/unicode:unicode_global_hdrs",
        "//src/mongo/db/geo:geo_global_hdrs",
        "//src/mongo/db/index:index_build_interceptor_idl_gen",
        "//src/mongo/db/index:index_global_hdrs",
        "//src/mongo/db/matcher:matcher_global_hdrs",
        "//src/mongo/db/matcher/schema:encrypt_schema_idl_gen",
        "//src/mongo/db/matcher/schema:schema_global_hdrs",
        "//src/mongo/db/modules/enterprise:enterprise_global_hdrs",
        "//src/mongo/db/modules/enterprise/docs:docs_global_hdrs",
        "//src/mongo/db/modules/enterprise/docs/fle:fle_global_hdrs",
        "//src/mongo/db/modules/enterprise/docs/testing:testing_global_hdrs",
        "//src/mongo/db/modules/enterprise/src:src_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/audit:audit_commands_idl_gen",
        "//src/mongo/db/modules/enterprise/src/audit:audit_config_idl_gen",
        "//src/mongo/db/modules/enterprise/src/audit:audit_decryptor_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/audit:audit_event_type_idl_gen",
        "//src/mongo/db/modules/enterprise/src/audit:audit_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/audit:audit_header_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/audit:audit_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/audit/logger:logger_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:mongo_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:ocsf_audit_events_idl_gen",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:ocsf_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/encryptdb:decrypt_tool_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/encryptdb:encryptdb_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/encryptdb:encryption_key_manager_idl_gen",
        "//src/mongo/db/modules/enterprise/src/encryptdb:encryption_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/encryptdb:keystore_metadata_idl_gen",
        "//src/mongo/db/modules/enterprise/src/encryptdb:log_redact_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/fcbis:fcbis_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/fips:fips_flag_client_idl_gen",
        "//src/mongo/db/modules/enterprise/src/fips:fips_flag_server_idl_gen",
        "//src/mongo/db/modules/enterprise/src/fips:fips_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/fle:fle_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/fle/commands:commands_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/fle/lib:lib_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/fle/query_analysis:query_analysis_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/fle/shell:shell_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/hot_backups:backup_cursor_parameters_idl_gen",
        "//src/mongo/db/modules/enterprise/src/hot_backups:document_source_backup_file_idl_gen",
        "//src/mongo/db/modules/enterprise/src/hot_backups:hot_backups_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/inmemory:inmemory_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/inmemory:inmemory_global_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/kerberos:kerberos_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/kerberos:kerberos_tool_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/kmip:kmip_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/kmip:kmip_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/ldap:ldap_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/ldap:ldap_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/ldap:ldap_options_mongod_idl_gen",
        "//src/mongo/db/modules/enterprise/src/ldap:ldap_parameters_idl_gen",
        "//src/mongo/db/modules/enterprise/src/ldap:ldap_runtime_parameters_idl_gen",
        "//src/mongo/db/modules/enterprise/src/ldap:ldap_tool_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/ldap:ldap_user_cache_poller_idl_gen",
        "//src/mongo/db/modules/enterprise/src/ldap/connections:connections_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/ldap/name_mapping:name_mapping_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/live_import:collection_properties_idl_gen",
        "//src/mongo/db/modules/enterprise/src/live_import:live_import_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/live_import/commands:commands_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/live_import/commands:export_collection_idl_gen",
        "//src/mongo/db/modules/enterprise/src/live_import/commands:import_collection_idl_gen",
        "//src/mongo/db/modules/enterprise/src/live_import/commands:vote_commit_import_collection_idl_gen",
        "//src/mongo/db/modules/enterprise/src/magic_restore:magic_restore_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/magic_restore:magic_restore_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/magic_restore:magic_restore_structs_idl_gen",
        "//src/mongo/db/modules/enterprise/src/queryable:queryable_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/queryable/blockstore:blockstore_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/queryable/queryable_wt:queryable_global_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/queryable/queryable_wt:queryable_wt_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/sasl:auth_delay_idl_gen",
        "//src/mongo/db/modules/enterprise/src/sasl:oidc_commands_idl_gen",
        "//src/mongo/db/modules/enterprise/src/sasl:oidc_parameters_idl_gen",
        "//src/mongo/db/modules/enterprise/src/sasl:sasl_aws_server_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/sasl:sasl_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/scripts:scripts_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/serverless:mongoqd_options_idl_gen",
        "//src/mongo/db/modules/enterprise/src/serverless:serverless_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/streams:streams_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/streams/commands:commands_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/streams/commands:stream_ops_idl_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:checkpoint_data_idl_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:common_idl_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:config_idl_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:exec_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/streams/exec:exec_internal_idl_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:stages_idl_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:checkpoint_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/streams/exec/tests:tests_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/streams/management:management_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/streams/management/tests:tests_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/streams/tools:tools_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/streams/util:util_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/streams/util/tests:tests_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/util:util_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/workloads:workloads_global_hdrs",
        "//src/mongo/db/modules/enterprise/src/workloads/streams:streams_global_hdrs",
        "//src/mongo/db/op_observer:op_observer_global_hdrs",
        "//src/mongo/db/ops:delete_request_idl_gen",
        "//src/mongo/db/ops:ops_global_hdrs",
        "//src/mongo/db/ops:single_write_result_idl_gen",
        "//src/mongo/db/ops:write_ops_idl_gen",
        "//src/mongo/db/pipeline:accumulator_percentile_idl_gen",
        "//src/mongo/db/pipeline:aggregate_command_idl_gen",
        "//src/mongo/db/pipeline:change_stream_pre_and_post_images_options_idl_gen",
        "//src/mongo/db/pipeline:change_stream_preimage_idl_gen",
        "//src/mongo/db/pipeline:document_source_change_stream_idl_gen",
        "//src/mongo/db/pipeline:document_source_coll_stats_idl_gen",
        "//src/mongo/db/pipeline:document_source_current_op_idl_gen",
        "//src/mongo/db/pipeline:document_source_densify_idl_gen",
        "//src/mongo/db/pipeline:document_source_fill_idl_gen",
        "//src/mongo/db/pipeline:document_source_internal_all_collection_stats_idl_gen",
        "//src/mongo/db/pipeline:document_source_internal_apply_oplog_update_idl_gen",
        "//src/mongo/db/pipeline:document_source_internal_projection_idl_gen",
        "//src/mongo/db/pipeline:document_source_list_cluster_catalog_idl_gen",
        "//src/mongo/db/pipeline:document_source_list_sampled_queries_idl_gen",
        "//src/mongo/db/pipeline:document_source_list_sessions_idl_gen",
        "//src/mongo/db/pipeline:document_source_merge_idl_gen",
        "//src/mongo/db/pipeline:document_source_merge_modes_idl_gen",
        "//src/mongo/db/pipeline:document_source_out_idl_gen",
        "//src/mongo/db/pipeline:document_source_query_settings_idl_gen",
        "//src/mongo/db/pipeline:document_source_query_stats_idl_gen",
        "//src/mongo/db/pipeline:document_source_replace_root_idl_gen",
        "//src/mongo/db/pipeline:document_source_set_variable_from_subpipeline_idl_gen",
        "//src/mongo/db/pipeline:document_source_set_window_fields_idl_gen",
        "//src/mongo/db/pipeline:document_source_union_with_idl_gen",
        "//src/mongo/db/pipeline:exchange_spec_idl_gen",
        "//src/mongo/db/pipeline:expression_parser_idl_gen",
        "//src/mongo/db/pipeline:external_data_source_option_idl_gen",
        "//src/mongo/db/pipeline:legacy_runtime_constants_idl_gen",
        "//src/mongo/db/pipeline:map_reduce_options_idl_gen",
        "//src/mongo/db/pipeline:name_expression_idl_gen",
        "//src/mongo/db/pipeline:pipeline_global_hdrs",
        "//src/mongo/db/pipeline:resume_token_idl_gen",
        "//src/mongo/db/pipeline:storage_stats_spec_idl_gen",
        "//src/mongo/db/pipeline:value_idl_gen",
        "//src/mongo/db/pipeline/abt:abt_global_hdrs",
        "//src/mongo/db/pipeline/document_source_internal_unpack_bucket_test:document_source_internal_unpack_bucket_test_global_hdrs",
        "//src/mongo/db/pipeline/process_interface:process_interface_global_hdrs",
        "//src/mongo/db/pipeline/search:document_source_internal_search_mongot_remote_idl_gen",
        "//src/mongo/db/pipeline/search:document_source_list_search_indexes_idl_gen",
        "//src/mongo/db/pipeline/search:plan_sharded_search_idl_gen",
        "//src/mongo/db/pipeline/search:search_global_hdrs",
        "//src/mongo/db/pipeline/visitors:visitors_global_hdrs",
        "//src/mongo/db/pipeline/window_function:window_function_global_hdrs",
        "//src/mongo/db/process_health:health_monitoring_server_parameters_idl_gen",
        "//src/mongo/db/process_health:process_health_global_hdrs",
        "//src/mongo/db/query:analyze_command_idl_gen",
        "//src/mongo/db/query:count_command_idl_gen",
        "//src/mongo/db/query:distinct_command_idl_gen",
        "//src/mongo/db/query:explain_verbosity_idl_gen",
        "//src/mongo/db/query:expression_index_knobs_idl_gen",
        "//src/mongo/db/query:find_command_idl_gen",
        "//src/mongo/db/query:getmore_command_idl_gen",
        "//src/mongo/db/query:hint_idl_gen",
        "//src/mongo/db/query:index_hint_idl_gen",
        "//src/mongo/db/query:kill_cursors_idl_gen",
        "//src/mongo/db/query:query_feature_flags_idl_gen",
        "//src/mongo/db/query:query_global_hdrs",
        "//src/mongo/db/query:query_knobs_idl_gen",
        "//src/mongo/db/query:tailable_mode_idl_gen",
        "//src/mongo/db/query/boolean_simplification:boolean_simplification_global_hdrs",
        "//src/mongo/db/query/ce:ce_global_hdrs",
        "//src/mongo/db/query/classic_runtime_planner:classic_runtime_planner_global_hdrs",
        "//src/mongo/db/query/classic_runtime_planner_for_sbe:classic_runtime_planner_for_sbe_global_hdrs",
        "//src/mongo/db/query/collation:collation_global_hdrs",
        "//src/mongo/db/query/cost_model:cost_model_global_hdrs",
        "//src/mongo/db/query/cost_model:cost_model_idl_gen",
        "//src/mongo/db/query/datetime:datetime_global_hdrs",
        "//src/mongo/db/query/fle:fle_global_hdrs",
        "//src/mongo/db/query/optimizer:optimizer_global_hdrs",
        "//src/mongo/db/query/optimizer/algebra:algebra_global_hdrs",
        "//src/mongo/db/query/optimizer/cascades:cascades_global_hdrs",
        "//src/mongo/db/query/optimizer/rewrites:rewrites_global_hdrs",
        "//src/mongo/db/query/optimizer/syntax:syntax_global_hdrs",
        "//src/mongo/db/query/optimizer/utils:utils_global_hdrs",
        "//src/mongo/db/query/plan_enumerator:plan_enumerator_global_hdrs",
        "//src/mongo/db/query/query_settings:query_settings_cluster_parameter_idl_gen",
        "//src/mongo/db/query/query_settings:query_settings_global_hdrs",
        "//src/mongo/db/query/query_settings:query_settings_idl_gen",
        "//src/mongo/db/query/query_shape:query_shape_global_hdrs",
        "//src/mongo/db/query/query_shape:query_shape_hash_idl_gen",
        "//src/mongo/db/query/query_shape:query_shape_idl_gen",
        "//src/mongo/db/query/query_shape:query_shape_test_idl_gen",
        "//src/mongo/db/query/query_stats:query_stats_global_hdrs",
        "//src/mongo/db/query/query_stats:transform_algorithm_idl_gen",
        "//src/mongo/db/query/search:manage_search_index_request_idl_gen",
        "//src/mongo/db/query/search:mongot_options_idl_gen",
        "//src/mongo/db/query/search:search_global_hdrs",
        "//src/mongo/db/query/search:search_index_options_idl_gen",
        "//src/mongo/db/query/search/mongotmock:mongotmock_global_hdrs",
        "//src/mongo/db/query/stats:stats_global_hdrs",
        "//src/mongo/db/query/stats:stats_idl_gen",
        "//src/mongo/db/query/timeseries:timeseries_global_hdrs",
        "//src/mongo/db/query/util:util_global_hdrs",
        "//src/mongo/db/repl:apply_ops_idl_gen",
        "//src/mongo/db/repl:database_cloner_idl_gen",
        "//src/mongo/db/repl:dbcheck_idl_gen",
        "//src/mongo/db/repl:election_reason_counter_idl_gen",
        "//src/mongo/db/repl:hello_idl_gen",
        "//src/mongo/db/repl:image_collection_entry_idl_gen",
        "//src/mongo/db/repl:member_config_idl_gen",
        "//src/mongo/db/repl:oplog_entry_idl_gen",
        "//src/mongo/db/repl:optime_base_idl_gen",
        "//src/mongo/db/repl:read_concern_args_idl_gen",
        "//src/mongo/db/repl:read_concern_idl_gen",
        "//src/mongo/db/repl:repl_global_hdrs",
        "//src/mongo/db/repl:repl_server_parameters_idl_gen",
        "//src/mongo/db/repl:repl_set_config_idl_gen",
        "//src/mongo/db/repl:repl_set_config_params_idl_gen",
        "//src/mongo/db/repl:repl_set_test_egress_idl_gen",
        "//src/mongo/db/repl:replication_consistency_markers_idl_gen",
        "//src/mongo/db/repl:replication_coordinator_impl_idl_gen",
        "//src/mongo/db/repl:replication_metrics_idl_gen",
        "//src/mongo/db/repl:replication_types_idl_gen",
        "//src/mongo/db/repl:rollback_idl_gen",
        "//src/mongo/db/repl:rollback_impl_idl_gen",
        "//src/mongo/db/repl:tenant_migration_state_machine_idl_gen",
        "//src/mongo/db/repl:topology_coordinator_idl_gen",
        "//src/mongo/db/s:add_shard_cmd_idl_gen",
        "//src/mongo/db/s:cleanup_structured_encryption_data_coordinator_idl_gen",
        "//src/mongo/db/s:collection_critical_section_document_idl_gen",
        "//src/mongo/db/s:collmod_coordinator_document_idl_gen",
        "//src/mongo/db/s:commit_chunk_migration_idl_gen",
        "//src/mongo/db/s:compact_structured_encryption_data_coordinator_idl_gen",
        "//src/mongo/db/s:convert_to_capped_coordinator_document_idl_gen",
        "//src/mongo/db/s:create_collection_coordinator_document_idl_gen",
        "//src/mongo/db/s:document_source_analyze_shard_key_read_write_distribution_idl_gen",
        "//src/mongo/db/s:drop_collection_coordinator_document_idl_gen",
        "//src/mongo/db/s:drop_database_coordinator_document_idl_gen",
        "//src/mongo/db/s:forwardable_operation_metadata_idl_gen",
        "//src/mongo/db/s:global_index_crud_commands_idl_gen",
        "//src/mongo/db/s:migration_coordinator_document_idl_gen",
        "//src/mongo/db/s:migration_recipient_recovery_document_idl_gen",
        "//src/mongo/db/s:move_primary_coordinator_document_idl_gen",
        "//src/mongo/db/s:participant_block_idl_gen",
        "//src/mongo/db/s:range_deletion_task_idl_gen",
        "//src/mongo/db/s:refine_collection_shard_key_coordinator_document_idl_gen",
        "//src/mongo/db/s:remove_chunks_idl_gen",
        "//src/mongo/db/s:remove_tags_idl_gen",
        "//src/mongo/db/s:reshard_collection_coordinator_document_idl_gen",
        "//src/mongo/db/s:resharding_test_commands_idl_gen",
        "//src/mongo/db/s:s_global_hdrs",
        "//src/mongo/db/s:set_allow_migrations_coordinator_document_idl_gen",
        "//src/mongo/db/s:shard_authoritative_catalog_idl_gen",
        "//src/mongo/db/s:sharded_collmod_idl_gen",
        "//src/mongo/db/s:sharded_index_catalog_commands_idl_gen",
        "//src/mongo/db/s:sharded_rename_collection_idl_gen",
        "//src/mongo/db/s:sharding_api_d_params_idl_gen",
        "//src/mongo/db/s:sharding_config_server_parameters_idl_gen",
        "//src/mongo/db/s:sharding_runtime_d_params_idl_gen",
        "//src/mongo/db/s:transaction_coordinator_document_idl_gen",
        "//src/mongo/db/s:transaction_coordinator_params_idl_gen",
        "//src/mongo/db/s:transaction_coordinators_stats_idl_gen",
        "//src/mongo/db/s:transition_to_sharded_cluster_idl_gen",
        "//src/mongo/db/s:type_shard_collection_idl_gen",
        "//src/mongo/db/s:type_shard_database_idl_gen",
        "//src/mongo/db/s:type_shard_identity_idl_gen",
        "//src/mongo/db/s:untrack_unsplittable_collection_coordinator_document_idl_gen",
        "//src/mongo/db/s:user_writes_critical_section_document_idl_gen",
        "//src/mongo/db/s/balancer:balancer_global_hdrs",
        "//src/mongo/db/s/config:config_global_hdrs",
        "//src/mongo/db/s/config:configsvr_coordinator_idl_gen",
        "//src/mongo/db/s/config:set_cluster_parameter_coordinator_document_idl_gen",
        "//src/mongo/db/s/config:set_user_write_block_mode_coordinator_document_idl_gen",
        "//src/mongo/db/s/global_index:common_types_idl_gen",
        "//src/mongo/db/s/global_index:global_index_cloner_idl_gen",
        "//src/mongo/db/s/global_index:global_index_global_hdrs",
        "//src/mongo/db/s/global_index:global_index_server_parameters_idl_gen",
        "//src/mongo/db/s/metrics:metrics_global_hdrs",
        "//src/mongo/db/s/metrics/field_names:field_names_global_hdrs",
        "//src/mongo/db/s/migration_blocking_operation:migration_blocking_operation_coordinator_idl_gen",
        "//src/mongo/db/s/migration_blocking_operation:migration_blocking_operation_global_hdrs",
        "//src/mongo/db/s/migration_blocking_operation:multi_update_coordinator_idl_gen",
        "//src/mongo/db/s/migration_blocking_operation:multi_update_coordinator_server_parameters_idl_gen",
        "//src/mongo/db/s/primary_only_service_helpers:phase_transition_progress_idl_gen",
        "//src/mongo/db/s/primary_only_service_helpers:primary_only_service_helpers_global_hdrs",
        "//src/mongo/db/s/resharding:coordinator_document_idl_gen",
        "//src/mongo/db/s/resharding:donor_document_idl_gen",
        "//src/mongo/db/s/resharding:donor_oplog_id_idl_gen",
        "//src/mongo/db/s/resharding:recipient_document_idl_gen",
        "//src/mongo/db/s/resharding:recipient_resume_document_idl_gen",
        "//src/mongo/db/s/resharding:resharding_change_event_o2_field_idl_gen",
        "//src/mongo/db/s/resharding:resharding_global_hdrs",
        "//src/mongo/db/s/resharding:resharding_oplog_applier_progress_idl_gen",
        "//src/mongo/db/s/resharding:resharding_server_parameters_idl_gen",
        "//src/mongo/db/s/resharding:resharding_txn_cloner_progress_idl_gen",
        "//src/mongo/db/serverless:serverless_global_hdrs",
        "//src/mongo/db/serverless:serverless_types_idl_gen",
        "//src/mongo/db/serverless:shard_split_commands_idl_gen",
        "//src/mongo/db/serverless:shard_split_state_machine_idl_gen",
        "//src/mongo/db/session:internal_transactions_reap_service_idl_gen",
        "//src/mongo/db/session:kill_sessions_idl_gen",
        "//src/mongo/db/session:logical_session_cache_idl_gen",
        "//src/mongo/db/session:logical_session_cache_stats_idl_gen",
        "//src/mongo/db/session:logical_session_id_idl_gen",
        "//src/mongo/db/session:session_global_hdrs",
        "//src/mongo/db/session:session_txn_record_idl_gen",
        "//src/mongo/db/session:sessions_server_parameters_idl_gen",
        "//src/mongo/db/sorter:sorter.cpp",
        "//src/mongo/db/sorter:sorter_global_hdrs",
        "//src/mongo/db/sorter:sorter_idl_gen",
        "//src/mongo/db/stats:operation_resource_consumption_idl_gen",
        "//src/mongo/db/stats:read_concern_stats_idl_gen",
        "//src/mongo/db/stats:read_preference_metrics_idl_gen",
        "//src/mongo/db/stats:server_write_concern_metrics_idl_gen",
        "//src/mongo/db/stats:stats_global_hdrs",
        "//src/mongo/db/storage:flow_control_parameters_idl_gen",
        "//src/mongo/db/storage:storage_global_hdrs",
        "//src/mongo/db/storage:storage_parameters_idl_gen",
        "//src/mongo/db/storage:two_phase_index_build_knobs_idl_gen",
        "//src/mongo/db/storage/control:control_global_hdrs",
        "//src/mongo/db/storage/devnull:devnull_global_hdrs",
        "//src/mongo/db/storage/kv:kv_global_hdrs",
        "//src/mongo/db/storage/wiredtiger:oplog_truncate_marker_parameters_idl_gen",
        "//src/mongo/db/storage/wiredtiger:wiredtiger_global_hdrs",
        "//src/mongo/db/storage/wiredtiger:wiredtiger_global_options_idl_gen",
        "//src/mongo/db/timeseries:timeseries_global_hdrs",
        "//src/mongo/db/timeseries:timeseries_idl_gen",
        "//src/mongo/db/timeseries/bucket_catalog:bucket_catalog_global_hdrs",
        "//src/mongo/db/transaction:transaction_global_hdrs",
        "//src/mongo/db/transaction:transaction_participant_idl_gen",
        "//src/mongo/db/transaction:transactions_stats_idl_gen",
        "//src/mongo/db/update:update_global_hdrs",
        "//src/mongo/db/views:views_global_hdrs",
        "//src/mongo/dbtests:dbtests_global_hdrs",
        "//src/mongo/dbtests:framework_options_idl_gen",
        "//src/mongo/dbtests/mock:mock_global_hdrs",
        "//src/mongo/embedded:embedded_global_hdrs",
        "//src/mongo/embedded/stitch_support:stitch_support_global_hdrs",
        "//src/mongo/executor:executor_global_hdrs",
        "//src/mongo/executor:network_interface_tl_idl_gen",
        "//src/mongo/executor:task_executor_cursor_parameters_idl_gen",
        "//src/mongo/executor:task_executor_pool_parameters_idl_gen",
        "//src/mongo/idl:cluster_server_parameter_idl_gen",
        "//src/mongo/idl:cluster_server_parameter_refresher_idl_gen",
        "//src/mongo/idl:cluster_server_parameter_test_idl_gen",
        "//src/mongo/idl:config_option_no_init_test_idl_gen",
        "//src/mongo/idl:config_option_test_idl_gen",
        "//src/mongo/idl:generic_argument_idl_gen",
        "//src/mongo/idl:idl_global_hdrs",
        "//src/mongo/idl:idl_parser_bm_idl_gen",
        "//src/mongo/idl:server_parameter_specialized_test_idl_gen",
        "//src/mongo/idl:server_parameter_with_storage_test_idl_gen",
        "//src/mongo/idl:server_parameter_with_storage_test_structs_idl_gen",
        "//src/mongo/idl:unittest_idl_gen",
        "//src/mongo/idl:unittest_import_idl_gen",
        "//src/mongo/installer:installer_global_hdrs",
        "//src/mongo/installer/msi/ca:ca_global_hdrs",
        "//src/mongo/logv2:logv2_global_hdrs",
        "//src/mongo/logv2:logv2_options_idl_gen",
        "//src/mongo/platform:platform_global_hdrs",
        "//src/mongo/resmoke:resmoke_global_hdrs",
        "//src/mongo/rpc:object_check_idl_gen",
        "//src/mongo/rpc:rewrite_state_change_errors_server_parameter_idl_gen",
        "//src/mongo/rpc:rpc_global_hdrs",
        "//src/mongo/rpc:topology_version_idl_gen",
        "//src/mongo/rpc:write_concern_error_idl_gen",
        "//src/mongo/rpc/metadata:audit_client_attrs_idl_gen",
        "//src/mongo/rpc/metadata:client_metadata_idl_gen",
        "//src/mongo/rpc/metadata:impersonated_user_metadata_idl_gen",
        "//src/mongo/rpc/metadata:metadata_global_hdrs",
        "//src/mongo/s:analyze_shard_key_cmd_idl_gen",
        "//src/mongo/s:analyze_shard_key_common_idl_gen",
        "//src/mongo/s:analyze_shard_key_documents_idl_gen",
        "//src/mongo/s:analyze_shard_key_feature_flag_idl_gen",
        "//src/mongo/s:analyze_shard_key_server_parameters_idl_gen",
        "//src/mongo/s:check_metadata_consistency_idl_gen",
        "//src/mongo/s:chunk_range_idl_gen",
        "//src/mongo/s:chunk_version_idl_gen",
        "//src/mongo/s:configure_query_analyzer_cmd_idl_gen",
        "//src/mongo/s:database_version_base_idl_gen",
        "//src/mongo/s:database_version_idl_gen",
        "//src/mongo/s:error_status_idl_gen",
        "//src/mongo/s:gossiped_routing_cache_idl_gen",
        "//src/mongo/s:index_version_idl_gen",
        "//src/mongo/s:mongod_and_mongos_server_parameters_idl_gen",
        "//src/mongo/s:mongos_options_idl_gen",
        "//src/mongo/s:mongos_server_parameters_idl_gen",
        "//src/mongo/s:refresh_query_analyzer_configuration_cmd_idl_gen",
        "//src/mongo/s:router_transactions_stats_idl_gen",
        "//src/mongo/s:s_global_hdrs",
        "//src/mongo/s:shard_version_idl_gen",
        "//src/mongo/s:sharding_cluster_parameters_idl_gen",
        "//src/mongo/s:sharding_feature_flags_idl_gen",
        "//src/mongo/s:sharding_task_executor_pool_idl_gen",
        "//src/mongo/s:sharding_types_idl_gen",
        "//src/mongo/s:type_collection_common_types_idl_gen",
        "//src/mongo/s/catalog:catalog_global_hdrs",
        "//src/mongo/s/catalog:type_chunk_base_idl_gen",
        "//src/mongo/s/catalog:type_collection_idl_gen",
        "//src/mongo/s/catalog:type_database_idl_gen",
        "//src/mongo/s/catalog:type_index_catalog_idl_gen",
        "//src/mongo/s/catalog:type_namespace_placement_idl_gen",
        "//src/mongo/s/catalog:type_remove_shard_event_idl_gen",
        "//src/mongo/s/client:client_global_hdrs",
        "//src/mongo/s/client:shard_idl_gen",
        "//src/mongo/s/commands:cluster_commands_idl_gen",
        "//src/mongo/s/commands:cluster_fsync_unlock_cmd_idl_gen",
        "//src/mongo/s/commands:cluster_replicate_search_index_command_idl_gen",
        "//src/mongo/s/commands:commands_global_hdrs",
        "//src/mongo/s/commands:refine_collection_shard_key_idl_gen",
        "//src/mongo/s/commands:shard_collection_idl_gen",
        "//src/mongo/s/migration_blocking_operation:migration_blocking_operation_cluster_parameters_idl_gen",
        "//src/mongo/s/migration_blocking_operation:migration_blocking_operation_feature_flags_idl_gen",
        "//src/mongo/s/migration_blocking_operation:migration_blocking_operation_global_hdrs",
        "//src/mongo/s/query:async_results_merger_params_idl_gen",
        "//src/mongo/s/query:cluster_query_knobs_idl_gen",
        "//src/mongo/s/query:query_global_hdrs",
        "//src/mongo/s/request_types:abort_reshard_collection_idl_gen",
        "//src/mongo/s/request_types:auto_split_vector_idl_gen",
        "//src/mongo/s/request_types:balancer_collection_status_idl_gen",
        "//src/mongo/s/request_types:cleanup_reshard_collection_idl_gen",
        "//src/mongo/s/request_types:clone_catalog_data_idl_gen",
        "//src/mongo/s/request_types:cluster_commands_without_shard_key_idl_gen",
        "//src/mongo/s/request_types:commit_reshard_collection_idl_gen",
        "//src/mongo/s/request_types:configure_collection_balancing_idl_gen",
        "//src/mongo/s/request_types:coordinate_multi_update_idl_gen",
        "//src/mongo/s/request_types:drop_collection_if_uuid_not_matching_idl_gen",
        "//src/mongo/s/request_types:ensure_chunk_version_is_greater_than_idl_gen",
        "//src/mongo/s/request_types:flush_database_cache_updates_idl_gen",
        "//src/mongo/s/request_types:flush_resharding_state_change_idl_gen",
        "//src/mongo/s/request_types:flush_routing_table_cache_updates_idl_gen",
        "//src/mongo/s/request_types:get_database_version_idl_gen",
        "//src/mongo/s/request_types:get_stats_for_balancing_idl_gen",
        "//src/mongo/s/request_types:merge_chunk_request_idl_gen",
        "//src/mongo/s/request_types:migration_blocking_operation_idl_gen",
        "//src/mongo/s/request_types:move_primary_idl_gen",
        "//src/mongo/s/request_types:move_range_request_idl_gen",
        "//src/mongo/s/request_types:placement_history_commands_idl_gen",
        "//src/mongo/s/request_types:remove_shard_idl_gen",
        "//src/mongo/s/request_types:request_types_global_hdrs",
        "//src/mongo/s/request_types:reset_placement_history_idl_gen",
        "//src/mongo/s/request_types:reshard_collection_idl_gen",
        "//src/mongo/s/request_types:resharding_operation_time_idl_gen",
        "//src/mongo/s/request_types:sharded_ddl_commands_idl_gen",
        "//src/mongo/s/request_types:shardsvr_join_ddl_coordinators_request_idl_gen",
        "//src/mongo/s/request_types:shardsvr_join_migrations_request_idl_gen",
        "//src/mongo/s/request_types:transition_from_dedicated_config_server_idl_gen",
        "//src/mongo/s/request_types:transition_to_dedicated_config_server_idl_gen",
        "//src/mongo/s/request_types:untrack_unsplittable_collection_idl_gen",
        "//src/mongo/s/request_types:wait_for_fail_point_idl_gen",
        "//src/mongo/s/resharding:resharding_feature_flag_idl_gen",
        "//src/mongo/s/resharding:resharding_global_hdrs",
        "//src/mongo/s/resharding:type_collection_fields_idl_gen",
        "//src/mongo/s/write_ops:write_ops_global_hdrs",
        "//src/mongo/scripting:deadline_monitor_idl_gen",
        "//src/mongo/scripting:scripting_global_hdrs",
        "//src/mongo/scripting/mozjs:engine_idl_gen",
        "//src/mongo/scripting/mozjs:internedstring.defs",
        "//src/mongo/scripting/mozjs:mozjs_global_hdrs",
        "//src/mongo/scripting/mozjs:scripting_util_idl_gen",
        "//src/mongo/shell:kms_idl_gen",
        "//src/mongo/shell:shell_global_hdrs",
        "//src/mongo/shell:shell_options_grpc_idl_gen",
        "//src/mongo/shell:shell_options_idl_gen",
        "//src/mongo/stdx:stdx_global_hdrs",
        "//src/mongo/tla_plus:tla_plus_global_hdrs",
        "//src/mongo/tla_plus/MongoReplReconfig:MongoReplReconfig_global_hdrs",
        "//src/mongo/tla_plus/MultiTenantMigrations:MultiTenantMigrations_global_hdrs",
        "//src/mongo/tla_plus/PriorityTicketHolder:PriorityTicketHolder_global_hdrs",
        "//src/mongo/tla_plus/RaftMongo:RaftMongo_global_hdrs",
        "//src/mongo/tla_plus/RaftMongoReplTimestamp:RaftMongoReplTimestamp_global_hdrs",
        "//src/mongo/tla_plus/ShardMerge:ShardMerge_global_hdrs",
        "//src/mongo/tools:tools_global_hdrs",
        "//src/mongo/tools/mongo_tidy_checks:mongo_tidy_checks_global_hdrs",
        "//src/mongo/tools/mongo_tidy_checks/tests:tests_global_hdrs",
        "//src/mongo/tools/mongobridge_tool:mongobridge_options_idl_gen",
        "//src/mongo/tools/mongobridge_tool:mongobridge_tool_global_hdrs",
        "//src/mongo/tools/workload_simulation:simulator_options_idl_gen",
        "//src/mongo/tools/workload_simulation:workload_simulation_global_hdrs",
        "//src/mongo/tools/workload_simulation/throughput_probing:throughput_probing_global_hdrs",
        "//src/mongo/transport:message_compressor_options_client_idl_gen",
        "//src/mongo/transport:message_compressor_options_server_idl_gen",
        "//src/mongo/transport:service_executor_idl_gen",
        "//src/mongo/transport:session_manager_common_idl_gen",
        "//src/mongo/transport:transport_global_hdrs",
        "//src/mongo/transport:transport_options_idl_gen",
        "//src/mongo/transport/asio:asio_global_hdrs",
        "//src/mongo/transport/grpc:grpc_feature_flag_idl_gen",
        "//src/mongo/transport/grpc:grpc_global_hdrs",
        "//src/mongo/transport/grpc:grpc_parameters_idl_gen",
        "//src/mongo/unittest:benchmark_options_idl_gen",
        "//src/mongo/unittest:integration_test_main_idl_gen",
        "//src/mongo/unittest:unittest_global_hdrs",
        "//src/mongo/unittest:unittest_options_idl_gen",
        "//src/mongo/unittest/expected_output:expected_output_global_hdrs",
        "//src/mongo/util:fail_point_server_parameter_idl_gen",
        "//src/mongo/util:password_params_idl_gen",
        "//src/mongo/util:pin_code_segments_params_idl_gen",
        "//src/mongo/util:tcmalloc_parameters_idl_gen",
        "//src/mongo/util:testing_options_idl_gen",
        "//src/mongo/util:util_global_hdrs",
        "//src/mongo/util/cmdline_utils:cmdline_utils_global_hdrs",
        "//src/mongo/util/concurrency:concurrency_global_hdrs",
        "//src/mongo/util/cryptd:cryptd_global_hdrs",
        "//src/mongo/util/cryptd:cryptd_options_idl_gen",
        "//src/mongo/util/immutable:immutable_global_hdrs",
        "//src/mongo/util/immutable/details:details_global_hdrs",
        "//src/mongo/util/net:hostandport_idl_gen",
        "//src/mongo/util/net:http_client_options_idl_gen",
        "//src/mongo/util/net:net_global_hdrs",
        "//src/mongo/util/net:ssl_options_client_idl_gen",
        "//src/mongo/util/net:ssl_options_server_idl_gen",
        "//src/mongo/util/net:ssl_parameters_auth_idl_gen",
        "//src/mongo/util/net:ssl_parameters_idl_gen",
        "//src/mongo/util/net/ocsp:ocsp_global_hdrs",
        "//src/mongo/util/net/private:private_global_hdrs",
        "//src/mongo/util/net/ssl:ssl",
        "//src/mongo/util/net/ssl/detail:ssl",
        "//src/mongo/util/net/ssl/detail/impl:ssl",
        "//src/mongo/util/net/ssl/impl:ssl",
        "//src/mongo/util/options_parser:options_parser_global_hdrs",
        "//src/mongo/util/tracking:tracking_global_hdrs",
        "//src/mongo/util/transitional_tools_do_not_use:transitional_tools_do_not_use_global_hdrs",
        "//src/mongo/util/version:releases_header",
        "//src/mongo/watchdog:watchdog_global_hdrs",
        "//src/mongo/watchdog:watchdog_mongod_idl_gen",
        "//src/third_party/wiredtiger:wt_config_header",
        "//src/third_party/wiredtiger:wt_version_header",
    ],
)
